유저수, 로그수 조회 구현

--- a/frontend/html/logs.html
+++ b/frontend/html/logs.html
@@ -49,6 +49,8 @@
           <div class="body-top-right">Mission > Logs</div>
         </div>
         <div class="body-top-bottom-line"></div>
+        <!-- 로그 수 -->
+        <div id="totalLogs" class="total-logs">Total:</div>
 
         <div class="body-bottom">
           <div class="body-container">
