--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -53,6 +53,8 @@
 
         <div class="body-bottom">
           <div class="body-container">
+            <!-- 회원 수 -->
+            <div id="totalUsers" class="total-users">Total:</div>
             <!-- 검색창 -->
             <div class="search-container">
               <input
