--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -17,11 +17,7 @@
   <body>
     <!-- 헤더 -->
     <header>
-      <img
-        src="https://github.com/sangwoorhie/BackEnd/assets/131964697/0c58003f-3027-4e63-9f4d-c870a0411cf7"
-        alt="Logo"
-        class="logo"
-      />
+      <img src="../image/kmplogo_fit.png" alt="Logo" class="logo" />
     </header>
     <main>
       <!-- 사이드 바 -->
@@ -189,6 +185,7 @@
     <!-- 푸터 -->
     <footer>Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.</footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/users.js"></script>
   </body>
 </html>
