--- a/frontend/html/logs.html
+++ b/frontend/html/logs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -17,11 +17,7 @@
   <body>
     <!-- 헤더 -->
     <header>
-      <img
-        src="https://github.com/sangwoorhie/BackEnd/assets/131964697/0c58003f-3027-4e63-9f4d-c870a0411cf7"
-        alt="Logo"
-        class="logo"
-      />
+      <img src="../image/kmplogo_fit.png" alt="Logo" class="logo" />
     </header>
     <main>
       <!-- 사이드 바 -->
@@ -81,13 +77,14 @@
                   <th>User Agent</th>
                 </tr>
               </thead>
-              <tbody id="log-table-body">
+              <tbody>
+                <!-- <tbody id="log-table-body"> -->
                 <!-- 로그 목록이 들어가는 부분 -->
               </tbody>
             </table>
             <br />
             <!-- 페이지네이션 -->
-            <div class="pagination">
+            <div class="pagination" id="pagination">
               <i class="fa-solid fa-arrow-left"></i>
               <ol id="numbers"></ol>
               <i class="fa-solid fa-arrow-right"></i>
@@ -98,6 +95,8 @@
     </main>
     <!-- 푸터 -->
     <footer>Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.</footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/logs.js"></script>
   </body>
 </html>
