--- a/frontend/html/logs.html
+++ b/frontend/html/logs.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -78,8 +78,8 @@
                 </tr>
               </thead>
               <tbody>
-                <!-- <tbody id="log-table-body"> -->
                 <!-- 로그 목록이 들어가는 부분 -->
+                <!-- <tbody id="log-table-body"> -->
               </tbody>
             </table>
             <br />
