--- a/frontend/html/common.html
+++ b/frontend/html/common.html
@@ -21,37 +21,156 @@
     <main id="main">
       <div id="side-bar">
         <div id="first-sidebar">Mission</div>
+        <!-- User 탭 -->
         <div id="second-sidebar" class="fa-solid fa-users">Users</div>
+        <!-- Logs 탭 -->
         <div id="third-sidebar" class="fa-solid fa-door-open">Logs</div>
       </div>
       <div id="body">
         <div id="body-top">body-top</div>
         <div id="body-bottom">
-          body-bottom
+          Users
           <br />
           <br />
           <br />
           <div id="container-box">
-            container-box
-            <div id="total-count">Total:</div>
+            <!-- 회원 수 -->
+            <div id="total-users" class="total-users">Total:</div>
+            <!-- 검색창 -->
             <div id="search-container">
               <input
                 type="text"
                 id="searchInput"
-                placeholder="조회할 로그 ID를 입력하세요."
+                placeholder="조회할 유저 ID를 입력하세요."
               />
-              <button id="searchButton">
+              <button id="search-button">
                 <i class="fa-solid fa-search"></i>
               </button>
             </div>
-            <div id="my-table">my-table</div>
-            <div id="delete-area">delete-area</div>
+            <br />
+            <!-- 테이블 -->
+            <table id="my-table">
+              <colgroup>
+                <col class="col1" />
+                <col class="col2" />
+                <col class="col3" />
+                <col class="col4" />
+                <col class="col3" />
+                <col class="col4" />
+              </colgroup>
+              <thead>
+                <tr>
+                  <th><input type="checkbox" id="selectAll" /></th>
+                  <th>ID</th>
+                  <th>Name</th>
+                  <th>E-mail</th>
+                  <th>Phone</th>
+                  <th>Organization</th>
+                </tr>
+              </thead>
+              <tbody id="user-table-body">
+                <!-- 유저 목록이 들어가는 부분 -->
+              </tbody>
+            </table>
+            <br />
+            <!-- 삭제 -->
+            <div id="delete-area">
+              <button id="delete-button">Delete</button>
+            </div>
+            <!-- 페이지네이션 -->
             <div id="pagination">pagination</div>
-            <div id="register-area">register-area</div>
+            <!-- 신규 회원생성 -->
+            <div id="register-area">
+              <button id="register-button">Register</button>
+            </div>
           </div>
         </div>
       </div>
     </main>
-    <footer id="footer">footer</footer>
+
+    <!-- 회원가입 모달 -->
+    <div id="createModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>사용자 등록</h2>
+        <br />
+        <br />
+        <div class="input-container">
+          <label for="userId">ID</label>
+          <input type="text" id="userId" placeholder="ID를 입력해 주세요." />
+          <button id="checkDuplicate">중복 확인</button>
+        </div>
+        <div class="input-container">
+          <label for="userPassword">Password</label>
+          <input
+            type="password"
+            id="userPassword"
+            placeholder="비밀번호는 최소 4자 이상의 영문 대소문자 및 숫자로 이루어져야 합니다."
+          />
+        </div>
+        <div class="input-container">
+          <label for="userName">Name</label>
+          <input
+            type="text"
+            id="userName"
+            placeholder="이름을 입력해 주세요."
+          />
+        </div>
+        <div class="input-container">
+          <label for="userEmail">E-mail</label>
+          <input
+            type="email"
+            id="userEmail"
+            placeholder="E-mail 형식에 맞게 입력해 주세요."
+          />
+        </div>
+        <div class="input-container">
+          <label for="userPhone">Phone</label>
+          <input
+            type="tel"
+            id="userPhone"
+            placeholder="핸드폰 번호는 `-`를 제외한, 숫자만 입력해 주세요."
+          />
+        </div>
+        <div class="input-container">
+          <label for="userOrganization">Organization</label>
+          <input
+            type="text"
+            id="userOrganization"
+            placeholder="소속을 입력해 주세요."
+          />
+        </div>
+        <div class="modal-buttons">
+          <br />
+          <br />
+          <button id="cancelBtn">Cancel</button>
+          <button id="registerBtn">Register</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- 삭제확인 모달 -->
+    <div id="deleteModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>사용자 삭제</h2>
+        <br />
+        <br />
+        <p>정말 삭제하시겠습니까? 한번 삭제하면 복구가 불가능합니다.</p>
+        <div class="btn-container">
+          <div class="modal-buttons">
+            <br />
+            <br />
+            <button id="cancelButton">Cancel</button>
+            <button id="confirmDeleteButton">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer id="footer">
+      Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../js/common.js"></script>
   </body>
 </html>
