--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -91,12 +91,14 @@
 
             <!-- 페이지네이션 -->
             <div class="pagination">
+              <!-- 삭제버튼 -->
               <button id="deleteButton">Delete</button>
               <div style="flex: 1"></div>
               <i class="fa-solid fa-arrow-left"></i>
               <ol id="numbers"></ol>
               <i class="fa-solid fa-arrow-right"></i>
               <div style="flex: 1"></div>
+              <!-- 회원가입버튼 -->
               <button id="registerButton">Register</button>
             </div>
           </div>
