--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -15,54 +15,56 @@
     />
   </head>
   <body>
-    <!-- 헤더 -->
-    <header>
+    <header id="header">
       <img src="../image/kmplogo_fit.png" alt="Logo" class="logo" />
     </header>
-    <main>
-      <!-- 사이드 바 -->
-      <ul class="sidebar">
-        <li class="first-sidebar">Mission</li>
-        <li class="second-sidebar">
-          <a href="users.html">
-            <i class="fa-solid fa-users" style="margin-right: 10px"></i>
+    <main id="main">
+      <ul id="side-bar">
+        <li id="first-sidebar">Mission</li>
+        <!-- User 탭 -->
+        <a href="users.html">
+          <i
+            id="second-sidebar"
+            class="fa-solid fa-users"
+            style="margin-right: 10px"
+          >
             Users
-          </a>
-        </li>
+          </i>
+        </a>
 
-        <li class="third-sidebar">
-          <a href="logs.html">
-            <i class="fa-solid fa-door-open" style="margin-right: 10px"></i>
+        <!-- Logs 탭 -->
+        <a href="logs.html">
+          <i
+            id="third-sidebar"
+            class="fa-solid fa-door-open"
+            style="margin-right: 10px"
+          >
             Logs
-          </a>
-        </li>
-        <li class="fourth-sidebar"></li>
+          </i>
+        </a>
       </ul>
-
-      <!-- 우측 화면 -->
-      <div class="body">
-        <div class="body-top">
-          <div class="body-top-left">Users</div>
-          <div class="body-top-right">Mission > Users</div>
-        </div>
-        <div class="body-top-bottom-line"></div>
-
-        <div class="body-bottom">
-          <div class="body-container">
+      <div id="body">
+        <div id="body-top">body-top</div>
+        <div id="body-bottom">
+          Users
+          <br />
+          <br />
+          <br />
+          <div id="container-box">
             <!-- 회원 수 -->
-            <div id="totalUsers" class="total-users">Total:</div>
+            <div id="total-users" class="total-users">Total:</div>
             <!-- 검색창 -->
-            <div class="search-container">
+            <div id="search-container">
               <input
                 type="text"
                 id="searchInput"
-                placeholder="조회할 사용자 ID를 입력하세요."
+                placeholder="조회할 유저 ID를 입력하세요."
               />
-              <button id="searchButton">
+              <button id="search-button">
                 <i class="fa-solid fa-search"></i>
               </button>
             </div>
-
+            <br />
             <!-- 테이블 -->
             <table id="my-table">
               <colgroup>
@@ -88,106 +90,108 @@
               </tbody>
             </table>
             <br />
-
-            <!-- 페이지네이션 -->
-            <div class="pagination">
-              <!-- 삭제버튼 -->
-              <button id="deleteButton">Delete</button>
-              <div style="flex: 1"></div>
-              <i class="fa-solid fa-arrow-left"></i>
-              <ol id="numbers"></ol>
-              <i class="fa-solid fa-arrow-right"></i>
-              <div style="flex: 1"></div>
-              <!-- 회원가입버튼 -->
-              <button id="registerButton">Register</button>
+            <!-- 삭제 -->
+            <div id="delete-area">
+              <button id="delete-button">Delete</button>
             </div>
-          </div>
-        </div>
-      </div>
-      <!-- 회원가입 모달창 -->
-      <div id="createModal" class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <h2>사용자 등록</h2>
-          <br />
-          <br />
-          <div class="input-container">
-            <label for="userId">ID</label>
-            <input type="text" id="userId" placeholder="ID를 입력해 주세요." />
-            <button id="checkDuplicate">중복 확인</button>
-          </div>
-          <div class="input-container">
-            <label for="userPassword">Password</label>
-            <input
-              type="password"
-              id="userPassword"
-              placeholder="비밀번호는 최소 4자 이상의 영문 대소문자 및 숫자로 이루어져야 합니다."
-            />
-          </div>
-          <div class="input-container">
-            <label for="userName">Name</label>
-            <input
-              type="text"
-              id="userName"
-              placeholder="이름을 입력해 주세요."
-            />
-          </div>
-          <div class="input-container">
-            <label for="userEmail">E-mail</label>
-            <input
-              type="email"
-              id="userEmail"
-              placeholder="E-mail 형식에 맞게 입력해 주세요."
-            />
-          </div>
-          <div class="input-container">
-            <label for="userPhone">Phone</label>
-            <input
-              type="tel"
-              id="userPhone"
-              placeholder="핸드폰 번호는 `-`를 제외한, 숫자만 입력해 주세요."
-            />
-          </div>
-          <div class="input-container">
-            <label for="userOrganization">Organization</label>
-            <input
-              type="text"
-              id="userOrganization"
-              placeholder="소속을 입력해 주세요."
-            />
-          </div>
-          <div class="modal-buttons">
-            <br />
-            <br />
-            <button id="cancelBtn">Cancel</button>
-            <button id="registerBtn">Register</button>
-          </div>
-        </div>
-      </div>
-
-      <!-- 삭제 모달창 -->
-      <div id="deleteModal" class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <h2>사용자 삭제</h2>
-          <br />
-          <br />
-          <p>정말 삭제하시겠습니까? 한번 삭제하면 복구가 불가능합니다.</p>
-          <div class="btn-container">
-            <div class="modal-buttons">
-              <br />
-              <br />
-              <button id="cancelButton">Cancel</button>
-              <button id="confirmDeleteButton">Delete</button>
+            <!-- 페이지네이션 -->
+            <div id="pagination">pagination</div>
+            <!-- 신규 회원생성 -->
+            <div id="register-area">
+              <button id="register-button">Register</button>
             </div>
           </div>
         </div>
       </div>
     </main>
-    <!-- 푸터 -->
-    <footer>Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.</footer>
+
+    <!-- 회원가입 모달 -->
+    <div id="createModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>사용자 등록</h2>
+        <br />
+        <br />
+        <div class="input-container">
+          <label for="userId">ID</label>
+          <input
+            type="text"
+            id="userId"
+            class="userId"
+            placeholder="ID를 입력해 주세요."
+          />
+          <button id="checkDuplicate">중복 확인</button>
+        </div>
+        <div class="input-container">
+          <label for="userPassword">Password</label>
+          <input
+            type="password"
+            id="userPassword"
+            placeholder="비밀번호는 최소 4자 이상 영문 대소문자 및 숫자로 작성해주세요."
+          />
+        </div>
+        <div class="input-container">
+          <label for="userName">Name</label>
+          <input
+            type="text"
+            id="userName"
+            placeholder="이름을 입력해 주세요."
+          />
+        </div>
+        <div class="input-container">
+          <label for="userEmail">E-mail</label>
+          <input
+            type="email"
+            id="userEmail"
+            placeholder="E-mail 형식에 맞게 입력해 주세요."
+          />
+        </div>
+        <div class="input-container">
+          <label for="userPhone">Phone</label>
+          <input
+            type="tel"
+            id="userPhone"
+            placeholder="핸드폰 번호는 `-`를 제외한 숫자만 입력해 주세요."
+          />
+        </div>
+        <div class="input-container">
+          <label for="userOrganization">Organization</label>
+          <input
+            type="text"
+            id="userOrganization"
+            placeholder="소속을 입력해 주세요."
+          />
+        </div>
+        <div class="modal-buttons">
+          <br />
+          <button id="cancelBtn">Cancel</button>
+          <button id="registerBtn">Register</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- 삭제확인 모달 -->
+    <!-- <div id="deleteModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>사용자 삭제</h2>
+        <br />
+        <br />
+        <p>정말 삭제하시겠습니까? 한번 삭제하면 복구가 불가능합니다.</p>
+        <div class="btn-container">
+          <div class="modal-buttons">
+            <br />
+            <br />
+            <button id="cancelButton">Cancel</button>
+            <button id="confirmDeleteButton">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div> -->
+    <footer id="footer">
+      Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/users.js"></script>
   </body>
 </html>
