유저 목록조회 페이지네이션 구현 (테스트 완)

--- a/frontend/html/logs.html
+++ b/frontend/html/logs.html
@@ -44,7 +44,7 @@
         </a>
       </ul>
       <div id="body">
-        <div id="body-top">body-top</div>
+        <div id="body-top"></div>
         <div id="body-bottom">
           Logs
           <br />
@@ -89,7 +89,25 @@
             <!-- 좌측하단 여핵 -->
             <div id="left-area"></div>
             <!-- 페이지네이션 -->
-            <div id="pagination">pagination</div>
+            <div id="pagination">
+              pagination
+              <i class="fa-solid fa-angles-left" id="first-page"></i>
+              <i class="fa-solid fa-angle-left" id="first-page"></i>
+              <div class="pages">
+                <span class="active">1</span>
+                <span>2</span>
+                <span>3</span>
+                <span>4</span>
+                <span>5</span>
+                <span>6</span>
+                <span>7</span>
+                <span>8</span>
+                <span>9</span>
+                <span>10</span>
+              </div>
+              <i class="fa-solid fa-angles-right" id="next-page"></i>
+              <i class="fa-solid fa-angle-right" id="last-page"></i>
+            </div>
             <!-- 우측하단 여백 -->
             <div id="right-area"></div>
           </div>
