--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -44,7 +44,7 @@
         </a>
       </ul>
       <div id="body">
-        <div id="body-top">body-top</div>
+        <div id="body-top"></div>
         <div id="body-bottom">
           Users
           <br />
@@ -95,7 +95,11 @@
               <button id="delete-button">Delete</button>
             </div>
             <!-- 페이지네이션 -->
-            <div id="pagination">pagination</div>
+            <div class="pagination" id="pagination">
+              <i class="fa-solid fa-arrow-left"></i>
+              <ol id="numbers"></ol>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
             <!-- 신규 회원생성 -->
             <div id="register-area">
               <button id="register-button">Register</button>
