log 목록조회 페이지네이션 완성, breadscrumb및 Total수 조회, register버튼 css 수정

--- a/frontend/html/logs.html
+++ b/frontend/html/logs.html
@@ -46,7 +46,8 @@
       <div id="body">
         <div id="body-top"></div>
         <div id="body-bottom">
-          Logs
+          <div id="first-breadcrumb">Logs</div>
+          <div id="second-breadcrumb">Mission > Logs</div>
           <br />
           <br />
           <br />
@@ -89,24 +90,10 @@
             <!-- 좌측하단 여핵 -->
             <div id="left-area"></div>
             <!-- 페이지네이션 -->
-            <div id="pagination">
-              pagination
-              <i class="fa-solid fa-angles-left" id="first-page"></i>
-              <i class="fa-solid fa-angle-left" id="first-page"></i>
-              <div class="pages">
-                <span class="active">1</span>
-                <span>2</span>
-                <span>3</span>
-                <span>4</span>
-                <span>5</span>
-                <span>6</span>
-                <span>7</span>
-                <span>8</span>
-                <span>9</span>
-                <span>10</span>
-              </div>
-              <i class="fa-solid fa-angles-right" id="next-page"></i>
-              <i class="fa-solid fa-angle-right" id="last-page"></i>
+            <div class="pagination" id="pagination">
+              <i class="fa-solid fa-arrow-left"></i>
+              <ol id="numbers"></ol>
+              <i class="fa-solid fa-arrow-right"></i>
             </div>
             <!-- 우측하단 여백 -->
             <div id="right-area"></div>
