--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -46,7 +46,8 @@
       <div id="body">
         <div id="body-top"></div>
         <div id="body-bottom">
-          Users
+          <div id="first-breadcrumb">Users</div>
+          <div id="second-breadcrumb">Mission > Users</div>
           <br />
           <br />
           <br />
