--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -75,6 +75,7 @@
                 <col class="col4" />
                 <col class="col3" />
                 <col class="col4" />
+                <col class="col5" />
               </colgroup>
               <thead>
                 <tr>
@@ -84,6 +85,7 @@
                   <th>E-mail</th>
                   <th>Phone</th>
                   <th>Organization</th>
+                  <th><i class="fa-solid fa-pen"></i></th>
                 </tr>
               </thead>
               <tbody id="user-table-body">
@@ -132,7 +134,7 @@
           <input
             type="password"
             id="userPassword"
-            placeholder="비밀번호는 최소 4자 이상 영문 대소문자 및 숫자로 작성해주세요."
+            placeholder="비밀번호는 4자이상 영문 대소문자 및 숫자로 작성해주세요."
           />
         </div>
         <div class="input-container">
@@ -171,6 +173,61 @@
           <br />
           <button id="cancelBtn">Cancel</button>
           <button id="registerBtn">Register</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- 정보수정 모달 -->
+    <div id="modifyModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>사용자 정보 수정</h2>
+        <br />
+        <br />
+        <div class="input-container">
+          <label for="originalPassword">Password</label>
+          <input
+            type="password"
+            id="originalPassword"
+            placeholder="기존 비밀번호를 입력하세요."
+          />
+        </div>
+        <div class="input-container">
+          <label for="newPassword">New Password</label>
+          <input
+            type="password"
+            id="newPassword"
+            placeholder="새 비밀번호를 4자이상 영문대소문자 및 숫자로 작성해주세요."
+          />
+        </div>
+        <div class="input-container">
+          <label for="userPhone">Phone</label>
+          <input
+            type="tel"
+            id="newPhone"
+            placeholder="핸드폰 번호는 `-`를 제외한 숫자만 입력해 주세요."
+          />
+        </div>
+        <div class="input-container">
+          <label for="userName">Name</label>
+          <input
+            type="text"
+            id="newName"
+            placeholder="수정할 이름을 입력해주세요."
+          />
+        </div>
+        <div class="input-container">
+          <label for="userOrganization">Organization</label>
+          <input
+            type="text"
+            id="newOrganization"
+            placeholder="수정할 소속을 입력해 주세요."
+          />
+        </div>
+        <div class="modal-buttons">
+          <br />
+          <button id="modifyCancelBtn">Cancel</button>
+          <button id="modifyBtn">Modify</button>
         </div>
       </div>
     </div>
