정보수정 완성(테스트 완), 비밀번호 숨기기,보이기

--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -136,6 +136,7 @@
             id="userPassword"
             placeholder="비밀번호는 4자이상 영문 대소문자 및 숫자로 작성해주세요."
           />
+          <button id="togglePassword">Show</button>
         </div>
         <div class="input-container">
           <label for="userName">Name</label>
@@ -191,6 +192,7 @@
             id="originalPassword"
             placeholder="기존 비밀번호를 입력하세요."
           />
+          <button id="toggleOriginalPassword">Show</button>
         </div>
         <div class="input-container">
           <label for="newPassword">New Password</label>
@@ -199,6 +201,7 @@
             id="newPassword"
             placeholder="새 비밀번호를 4자이상 영문대소문자 및 숫자로 작성해주세요."
           />
+          <button id="toggleModifyPassword">Show</button>
         </div>
         <div class="input-container">
           <label for="userPhone">Phone</label>
