페이지네이션 가장 첫번째 페이지, 가장 마지막 페이지 이동 구현 (테스트 완)

--- a/frontend/html/logs.html
+++ b/frontend/html/logs.html
@@ -91,9 +91,11 @@
             <div id="left-area"></div>
             <!-- 페이지네이션 -->
             <div class="pagination" id="pagination">
-              <i class="fa-solid fa-arrow-left"></i>
+              <i class="fa-solid fa-angles-left"></i>
+              <i class="fa-solid fa-angle-left"></i>
               <ol id="numbers"></ol>
-              <i class="fa-solid fa-arrow-right"></i>
+              <i class="fa-solid fa-angle-right"></i>
+              <i class="fa-solid fa-angles-right"></i>
             </div>
             <!-- 우측하단 여백 -->
             <div id="right-area"></div>
