--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -99,9 +99,11 @@
             </div>
             <!-- 페이지네이션 -->
             <div class="pagination" id="pagination">
-              <i class="fa-solid fa-arrow-left"></i>
+              <i class="fa-solid fa-angles-left"></i>
+              <i class="fa-solid fa-angle-left"></i>
               <ol id="numbers"></ol>
-              <i class="fa-solid fa-arrow-right"></i>
+              <i class="fa-solid fa-angle-right"></i>
+              <i class="fa-solid fa-angles-right"></i>
             </div>
             <!-- 신규 회원생성 -->
             <div id="register-area">
