사용자 삭제시 경고모달창

--- a/frontend/html/logs.html
+++ b/frontend/html/logs.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header id="header">
-      <img src="../image/kmplogo_fit.png" alt="Logo" class="logo" />
+      <img src="../img/kmplogo_fit.png" alt="Logo" class="logo" />
     </header>
     <main id="main">
       <ul id="side-bar">
