--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header id="header">
-      <img src="../image/kmplogo_fit.png" alt="Logo" class="logo" />
+      <img src="../img/kmplogo_fit.png" alt="Logo" class="logo" />
     </header>
     <main id="main">
       <ul id="side-bar">
@@ -238,23 +238,19 @@
     </div>
 
     <!-- 삭제확인 모달 -->
-    <!-- <div id="deleteModal" class="modal">
+    <div id="deleteModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
         <h2>사용자 삭제</h2>
         <br />
         <br />
-        <p>정말 삭제하시겠습니까? 한번 삭제하면 복구가 불가능합니다.</p>
-        <div class="btn-container">
-          <div class="modal-buttons">
-            <br />
-            <br />
-            <button id="cancelButton">Cancel</button>
-            <button id="confirmDeleteButton">Delete</button>
-          </div>
+        <p>정말 삭제하시겠습니까? 한 번 삭제하면 복구할 수 없습니다.</p>
+        <div class="modal-buttons">
+          <button id="cancelDeleteBtn">Cancel</button>
+          <button id="confirmDeleteBtn">Delete</button>
         </div>
       </div>
-    </div> -->
+    </div>
     <footer id="footer">
       Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.
     </footer>
