회원등록, 정보수정 모달 input창(입력 필드), 우측의 버튼의 영향받지 않고 좌측 정렬

--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -65,7 +65,7 @@
                 <i class="fa-solid fa-search"></i>
               </button>
             </div>
-            <br />
+
             <!-- 테이블 -->
             <table id="my-table">
               <colgroup>
@@ -136,7 +136,7 @@
           <input
             type="password"
             id="userPassword"
-            placeholder="비밀번호는 4자이상 영문 대소문자 및 숫자로 작성해주세요."
+            placeholder="비밀번호를 입력해 주세요."
           />
           <button id="togglePassword">Show</button>
         </div>
@@ -161,7 +161,7 @@
           <input
             type="tel"
             id="userPhone"
-            placeholder="핸드폰 번호는 `-`를 제외한 숫자만 입력해 주세요."
+            placeholder="핸드폰 번호를 입력해 주세요."
           />
         </div>
         <div class="input-container">
@@ -192,7 +192,7 @@
           <input
             type="password"
             id="originalPassword"
-            placeholder="기존 비밀번호를 입력하세요."
+            placeholder="기존 비밀번호를 입력해 주세요."
           />
           <button id="toggleOriginalPassword">Show</button>
         </div>
@@ -201,7 +201,7 @@
           <input
             type="password"
             id="newPassword"
-            placeholder="새 비밀번호를 4자이상 영문대소문자 및 숫자로 작성해주세요."
+            placeholder="변경할 비밀번호를 입력해 주세요."
           />
           <button id="toggleModifyPassword">Show</button>
         </div>
@@ -210,7 +210,7 @@
           <input
             type="tel"
             id="newPhone"
-            placeholder="핸드폰 번호는 `-`를 제외한 숫자만 입력해 주세요."
+            placeholder="핸드폰 번호를 입력해 주세요."
           />
         </div>
         <div class="input-container">
@@ -218,7 +218,7 @@
           <input
             type="text"
             id="newName"
-            placeholder="수정할 이름을 입력해주세요."
+            placeholder="변경할 이름을 입력해 주세요."
           />
         </div>
         <div class="input-container">
@@ -226,7 +226,7 @@
           <input
             type="text"
             id="newOrganization"
-            placeholder="수정할 소속을 입력해 주세요."
+            placeholder="변경할 소속을 입력해 주세요."
           />
         </div>
         <div class="modal-buttons">
