--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -75,7 +75,6 @@
                 <col class="col4" />
                 <col class="col3" />
                 <col class="col4" />
-                <col class="col5" />
               </colgroup>
               <thead>
                 <tr>
@@ -85,7 +84,6 @@
                   <th>E-mail</th>
                   <th>Phone</th>
                   <th>Organization</th>
-                  <th><i class="fa-solid fa-pen"></i></th>
                 </tr>
               </thead>
               <tbody id="user-table-body">
@@ -113,6 +111,9 @@
         </div>
       </div>
     </main>
+    <footer id="footer">
+      Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.
+    </footer>
 
     <!-- 회원가입 모달 -->
     <div id="createModal" class="modal">
@@ -174,14 +175,14 @@
         </div>
         <div class="modal-buttons">
           <br />
-          <button id="cancelBtn">Cancel</button>
+          <button id="registercancelBtn">Cancel</button>
           <button id="registerBtn">Register</button>
         </div>
       </div>
     </div>
 
     <!-- 정보수정 모달 -->
-    <div id="modifyModal" class="modal">
+    <div id="modifyModal" class="modifyModal">
       <div class="modal-content">
         <span class="close">&times;</span>
         <h2>사용자 정보 수정</h2>
@@ -232,7 +233,7 @@
         <div class="modal-buttons">
           <br />
           <button id="modifyCancelBtn">Cancel</button>
-          <button id="modifyBtn">Modify</button>
+          <button id="modifyBtnConfirm">Modify</button>
         </div>
       </div>
     </div>
@@ -251,9 +252,42 @@
         </div>
       </div>
     </div>
-    <footer id="footer">
-      Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.
-    </footer>
+
+    <!-- 유저 정보조회 모달 -->
+    <div id="userDetailModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>사용자 정보조회</h2>
+        <br />
+        <br />
+        <div class="input-container">
+          <label for="detailUserId">ID</label>
+          <input type="text" id="detailUserId" readonly />
+        </div>
+        <div class="input-container">
+          <label for="detailUserName">Name</label>
+          <input type="text" id="detailUserName" readonly />
+        </div>
+        <div class="input-container">
+          <label for="detailUserEmail">E-mail</label>
+          <input type="email" id="detailUserEmail" readonly />
+        </div>
+        <div class="input-container">
+          <label for="detailUserPhone">Phone</label>
+          <input type="tel" id="detailUserPhone" readonly />
+        </div>
+        <div class="input-container">
+          <label for="detailUserOrganization">Organization</label>
+          <input type="text" id="detailUserOrganization" readonly />
+        </div>
+        <div class="modal-buttons">
+          <br />
+          <button id="modifycancelBtn">Cancel</button>
+          <button id="modifyBtn">Modify</button>
+        </div>
+      </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../js/users.js"></script>
   </body>
