--- a/frontend/html/logs.html
+++ b/frontend/html/logs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -86,6 +86,7 @@
                 <!-- 로그 목록이 들어가는 부분 -->
               </tbody>
             </table>
+            <br />
             <br />
             <!-- 좌측하단 여핵 -->
             <div id="left-area"></div>
