조회 검색창 수정: 돋보기버튼 input창 내부에 배치

--- a/frontend/html/logs.html
+++ b/frontend/html/logs.html
@@ -56,14 +56,16 @@
             <div id="total-logs" class="total-logs">Total:</div>
             <!-- 검색창 -->
             <div id="search-container">
-              <input
-                type="text"
-                id="searchInput"
-                placeholder="조회할 로그 ID를 입력하세요."
-              />
-              <button id="search-button">
-                <i class="fa-solid fa-search"></i>
-              </button>
+              <div id="search-box">
+                <input
+                  type="text"
+                  id="searchInput"
+                  placeholder=" 조회할 로그 ID를 입력하세요."
+                />
+                <div id="magnifier">
+                  <i class="fa-solid fa-search" id="search-button"></i>
+                </div>
+              </div>
             </div>
             <br />
             <!-- 테이블 -->
