검색창 너비늘림, 유저정보수정시 기존정보 input창에 남도록 수정, Header 및 Footer는 세로스크롤의 움직임에 따라 보이거나, 보이지않도록 변경

--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -176,6 +176,8 @@
             placeholder="소속을 입력해 주세요."
           />
         </div>
+        <br />
+        <p>※ ID 및 E-mail은 회원가입 후 변경할 수 없습니다.</p>
         <div class="modal-buttons">
           <br />
           <button id="registercancelBtn">Cancel</button>
@@ -244,19 +246,19 @@
           <button id="toggleModifyPassword">Show</button>
         </div>
         <div class="input-container">
-          <label for="userPhone">Phone</label>
-          <input
-            type="tel"
-            id="newPhone"
-            placeholder="핸드폰 번호를 입력해 주세요."
-          />
-        </div>
-        <div class="input-container">
           <label for="userName">Name</label>
           <input
             type="text"
             id="newName"
             placeholder="변경할 이름을 입력해 주세요."
+          />
+        </div>
+        <div class="input-container">
+          <label for="userPhone">Phone</label>
+          <input
+            type="tel"
+            id="newPhone"
+            placeholder="핸드폰 번호를 입력해 주세요."
           />
         </div>
         <div class="input-container">
