스웨거API 적용

--- a/frontend/html/logs.html
+++ b/frontend/html/logs.html
@@ -23,24 +23,23 @@
         <li id="first-sidebar">Mission</li>
         <!-- User 탭 -->
         <a href="users.html">
-          <i
-            id="second-sidebar"
-            class="fa-solid fa-users"
-            style="margin-right: 10px"
-          >
-            Users
-          </i>
+          <div id="second-sidebar">
+            <i class="fa-solid fa-users" style="flex: 2; text-align: right"></i>
+            <span style="flex: 3; text-align: left; font-size: 20px"
+              >Users</span
+            >
+          </div>
         </a>
 
         <!-- Logs 탭 -->
         <a href="logs.html">
-          <i
-            id="third-sidebar"
-            class="fa-solid fa-door-open"
-            style="margin-right: 10px"
-          >
-            Logs
-          </i>
+          <div id="third-sidebar">
+            <i
+              class="fa-solid fa-door-open"
+              style="flex: 2; text-align: right"
+            ></i>
+            <span style="flex: 3; text-align: left; font-size: 20px">Logs</span>
+          </div>
         </a>
       </ul>
       <div id="body">
@@ -48,6 +47,8 @@
         <div id="body-bottom">
           <div id="first-breadcrumb">Logs</div>
           <div id="second-breadcrumb">Mission > Logs</div>
+          <br />
+          <br />
           <br />
           <br />
           <br />
