--- a/frontend/html/users.html
+++ b/frontend/html/users.html
@@ -15,109 +15,112 @@
     />
   </head>
   <body>
-    <header id="header">
-      <img src="../img/kmplogo_fit.png" alt="Logo" class="logo" />
-    </header>
-    <main id="main">
-      <ul id="side-bar">
-        <li id="first-sidebar">Mission</li>
-        <!-- User 탭 -->
-        <a href="users.html">
-          <div id="second-sidebar">
-            <i class="fa-solid fa-users" style="flex: 2; text-align: right"></i>
-            <span style="flex: 3; text-align: left; font-size: 20px"
-              >Users</span
-            >
-          </div>
-        </a>
+    <div class="wrapper">
+      <header id="header">
+        <img src="../img/kmplogo_fit.png" alt="Logo" class="logo" />
+      </header>
+      <main id="main">
+        <ul id="side-bar">
+          <li id="first-sidebar">Mission</li>
+          <!-- User 탭 -->
+          <a href="users.html">
+            <div id="second-sidebar">
+              <i
+                class="fa-solid fa-users"
+                style="flex: 2; text-align: right"
+              ></i>
+              <span style="flex: 3; text-align: left; font-size: 20px"
+                >Users</span
+              >
+            </div>
+          </a>
 
-        <!-- Logs 탭 -->
-        <a href="logs.html">
-          <div id="third-sidebar">
-            <i
-              class="fa-solid fa-door-open"
-              style="flex: 2; text-align: right"
-            ></i>
-            <span style="flex: 3; text-align: left; font-size: 20px">Logs</span>
-          </div>
-        </a>
-      </ul>
-      <div id="body">
-        <div id="body-top"></div>
-        <div id="body-bottom">
-          <div id="first-breadcrumb">Users</div>
-          <div id="second-breadcrumb">Mission > Users</div>
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <div id="container-box">
-            <!-- 회원 수 -->
-            <div id="total-users" class="total-users">Total:</div>
-            <!-- 검색창 -->
-            <div id="search-container">
-              <div id="search-box">
-                <input
-                  type="text"
-                  id="searchInput"
-                  placeholder=" 조회할 유저 ID를 입력하세요."
-                />
-                <div id="magnifier">
-                  <i class="fa-solid fa-search" id="search-button"></i>
+          <!-- Logs 탭 -->
+          <a href="logs.html">
+            <div id="third-sidebar">
+              <i
+                class="fa-solid fa-door-open"
+                style="flex: 2; text-align: right"
+              ></i>
+              <span style="flex: 3; text-align: left; font-size: 20px"
+                >Logs</span
+              >
+            </div>
+          </a>
+        </ul>
+        <div id="body-all">
+          <div id="body-bottom">
+            <div id="first-breadcrumb">Users</div>
+            <div id="second-breadcrumb">Mission > Users</div>
+
+            <div id="container-box">
+              <div id="inner-box">
+                <!-- 회원 수 -->
+                <div id="total-users" class="total-users">Total:</div>
+                <!-- 검색창 -->
+                <div id="search-container">
+                  <div id="search-box">
+                    <input
+                      type="text"
+                      id="searchInput"
+                      placeholder=" 조회할 유저 ID를 입력하세요."
+                    />
+                    <div id="magnifier">
+                      <i class="fa-solid fa-search" id="search-button"></i>
+                    </div>
+                  </div>
+                </div>
+                <br />
+                <!-- 테이블 -->
+                <table id="my-table">
+                  <colgroup>
+                    <col class="col1" />
+                    <col class="col2" />
+                    <col class="col3" />
+                    <col class="col3" />
+                    <col class="col3" />
+                    <col class="col3" />
+                  </colgroup>
+                  <thead>
+                    <tr>
+                      <th><input type="checkbox" id="selectAll" /></th>
+                      <th>ID</th>
+                      <th>Name</th>
+                      <th>E-mail</th>
+                      <th>Phone</th>
+                      <th>Organization</th>
+                    </tr>
+                  </thead>
+                  <tbody id="user-table-body">
+                    <!-- 유저 목록이 들어가는 부분 -->
+                  </tbody>
+                </table>
+
+                <!-- 삭제 -->
+                <div id="delete-area">
+                  <button id="delete-button">Delete</button>
+                </div>
+                <!-- 페이지네이션 -->
+                <div class="pagination" id="pagination">
+                  <i class="fa-solid fa-angles-left"></i>
+                  <i class="fa-solid fa-angle-left"></i>
+                  <ol id="numbers"></ol>
+                  <i class="fa-solid fa-angle-right"></i>
+                  <i class="fa-solid fa-angles-right"></i>
+                </div>
+                <!-- 신규 회원생성 -->
+                <div id="register-area">
+                  <button id="register-button">Register</button>
                 </div>
               </div>
             </div>
-            <br />
-            <!-- 테이블 -->
-            <table id="my-table">
-              <colgroup>
-                <col class="col1" />
-                <col class="col2" />
-                <col class="col3" />
-                <col class="col4" />
-                <col class="col3" />
-                <col class="col4" />
-              </colgroup>
-              <thead>
-                <tr>
-                  <th><input type="checkbox" id="selectAll" /></th>
-                  <th>ID</th>
-                  <th>Name</th>
-                  <th>E-mail</th>
-                  <th>Phone</th>
-                  <th>Organization</th>
-                </tr>
-              </thead>
-              <tbody id="user-table-body">
-                <!-- 유저 목록이 들어가는 부분 -->
-              </tbody>
-            </table>
-            <br />
-            <br />
-            <!-- 삭제 -->
-            <div id="delete-area">
-              <button id="delete-button">Delete</button>
-            </div>
-            <!-- 페이지네이션 -->
-            <div class="pagination" id="pagination">
-              <i class="fa-solid fa-angles-left"></i>
-              <i class="fa-solid fa-angle-left"></i>
-              <ol id="numbers"></ol>
-              <i class="fa-solid fa-angle-right"></i>
-              <i class="fa-solid fa-angles-right"></i>
-            </div>
-            <!-- 신규 회원생성 -->
-            <div id="register-area">
-              <button id="register-button">Register</button>
-            </div>
           </div>
         </div>
-      </div>
-    </main>
-    <footer id="footer">
-      Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.
-    </footer>
+      </main>
+      <footer id="footer">
+        <p>Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.</p>
+      </footer>
+    </div>
 
     <!-- 회원가입 모달 -->
     <div id="createModal" class="modal">
